--- a/build.gradle
+++ b/build.gradle
@@ -35,8 +35,12 @@ repositories {
 dependencies {
     implementation 'com.github.retrooper.packetevents:spigot:2.0.0-SNAPSHOT'
     implementation 'co.aikar:acf-paper:0.5.1-SNAPSHOT'
+    compileOnly 'org.bstats:bstats-bukkit:3.0.0'
+    compileOnly 'club.minnced:discord-webhooks:0.8.0'
+    compileOnly 'it.unimi.dsi:fastutil:8.5.8'
     implementation 'org.jetbrains:annotations:23.0.0' // Why is this needed to compile?
     implementation 'github.scarsz:configuralize:1.4.0'
+    compileOnly 'com.github.puregero:multilib:1.1.3'
 
     implementation 'com.github.MWHunter:GrimAPI:-SNAPSHOT'
     //used for local testing: implementation 'ac.grim.grimac:GrimAPI:1.0'
