--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,7 @@ java.targetCompatibility = JavaVersion.VERSION_1_8
 shadowJar {
     minimize()
     relocate 'net.kyori', 'ac.grim.grimac.shaded.kyori'
+    delete "META-INF"
     archiveFileName = "${project.name}-${project.version}.jar"
 }
 
