--- a/build.gradle
+++ b/build.gradle
@@ -65,7 +65,9 @@ java.targetCompatibility = JavaVersion.VERSION_1_8
 shadowJar {
     minimize()
     relocate 'net.kyori', 'ac.grim.grimac.shaded.kyori'
-    delete "META-INF"
+    from(configurations.shade.collect { it.isDirectory() ? it : zipTree(it) }) {
+        exclude 'META-INF', 'META-INF/**'
+    }
     archiveFileName = "${project.name}-${project.version}.jar"
 }
 
